unpackaged/main/default/objects/bt_stripe__Transaction__c/fields/bt_stripe__Paid__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Paid__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Use this checkbox only on Non-Stripe Transactions.</description>
    <inlineHelpText>Use this checkbox only on Non-Stripe Transactions.</inlineHelpText>
    <label>Paid</label>
    <type>Checkbox</type>
</CustomField>