unpackaged/main/default/objects/bt_stripe__Transaction__c/fields/bt_stripe__Parent_Transaction_Id__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Parent_Transaction_Id__c</fullName>
    <inlineHelpText>Unique Gateway-generated value. This is the unique ID related to the original transaction. This field is used to create the relation with refunds and partial refunds.</inlineHelpText>
    <label>Original Transaction ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>