unpackaged/main/default/objects/bt_stripe__Transaction__c/fields/bt_stripe__Partial_Amount__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Partial_Amount__c</fullName>
    <description>Amount which is used when capturing/authorizing/refunding the Transactions using the declarative function checkboxes.</description>
    <inlineHelpText>Amount which is used when capturing/authorizing/refunding the Transactions using the declarative function checkboxes.</inlineHelpText>
    <label>Partial Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>