unpackaged/main/default/objects/bt_stripe__Transaction__c/fields/bt_stripe__Paylink_Display_Language__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Paylink_Display_Language__c</fullName>
    <description>List of supported display languages for Paylink.</description>
    <inlineHelpText>Select language to be displayed to the user when using Paylink. Defaults to English if left blank.</inlineHelpText>
    <label>Paylink Display Language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>bt_stripe__Languages</valueSetName>
    </valueSet>
</CustomField>