unpackaged/main/default/objects/bt_stripe__Transaction__c/fields/bt_stripe__Payment_Gateway__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Payment_Gateway__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The Stripe account this transaction relates to.</inlineHelpText>
    <label>Payment Gateway</label>
    <referenceTo>bt_stripe__Payment_Gateway__c</referenceTo>
    <relationshipLabel>Transactions</relationshipLabel>
    <relationshipName>Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>