unpackaged/main/default/objects/bt_stripe__Transaction__c/fields/bt_stripe__Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Payment_Method__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The payment method used to process this transaction, such as a debit or credit card, or a bank ACH account.</inlineHelpText>
    <label>Payment Method</label>
    <referenceTo>bt_stripe__Payment_Method__c</referenceTo>
    <relationshipLabel>Transactions</relationshipLabel>
    <relationshipName>Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>