unpackaged/main/default/objects/bt_stripe__Transaction__c/fields/bt_stripe__Payment_Method_Billing_Email__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Payment_Method_Billing_Email__c</fullName>
    <label>Payment Method Billing Email</label>
    <type>Email</type>
</CustomField>