unpackaged/main/default/objects/bt_stripe__Transaction__c/fields/bt_stripe__Payment_Method_Funding__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Payment_Method_Funding__c</fullName>
    <label>Payment Method Funding</label>
    <length>255</length>
    <type>Text</type>
</CustomField>