unpackaged/main/default/objects/bt_stripe__Transaction__c/fields/bt_stripe__Payment_Method_Last_4__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Payment_Method_Last_4__c</fullName>
    <label>Payment Method Last 4</label>
    <length>4</length>
    <type>Text</type>
</CustomField>