unpackaged/main/default/objects/bt_stripe__Transaction__c/fields/bt_stripe__Payout__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Payout__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Auto-populated if a payout was processed that includes this transaction.</inlineHelpText>
    <label>Payout</label>
    <referenceTo>bt_stripe__Transaction__c</referenceTo>
    <relationshipLabel>Transactions for Payout</relationshipLabel>
    <relationshipName>Transactions_Payouts</relationshipName>
    <type>Lookup</type>
</CustomField>