unpackaged/main/default/objects/bt_stripe__Transaction__c/fields/bt_stripe__Payout_Arrival_Date__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Payout_Arrival_Date__c</fullName>
    <description>Date the payout is expected to arrive in the bank. This factors in delays like weekends or bank holidays.</description>
    <inlineHelpText>Date the payout is expected to arrive in the bank. This factors in delays like weekends or bank holidays.</inlineHelpText>
    <label>Payout Arrival Date</label>
    <type>Date</type>
</CustomField>