unpackaged/main/default/objects/bt_stripe__Transaction__c/fields/bt_stripe__Payout_Destination_Country__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Payout_Destination_Country__c</fullName>
    <inlineHelpText>Country of the bank that receives the Payout.</inlineHelpText>
    <label>Payout Destination Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>