unpackaged/main/default/objects/bt_stripe__Transaction__c/fields/bt_stripe__Payout_Method__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Payout_Method__c</fullName>
    <label>Payout Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Instant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>