unpackaged/main/default/objects/bt_stripe__Transaction__c/fields/bt_stripe__Reattempt__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Reattempt__c</fullName>
    <inlineHelpText>Shows the number of times the transaction has been reattempted.</inlineHelpText>
    <label>Reattempt Number</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>