unpackaged/main/default/objects/bt_stripe__Transaction__c/fields/bt_stripe__Reattempted_Transaction__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Reattempted_Transaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Reattempted transactions occur automatically when auto-charge is set, the transaction fails to process, and reattempt logic is enabled. This field populates automatically with the transaction ID, related to the original transaction.</inlineHelpText>
    <label>Original Transaction (If Reattempt)</label>
    <referenceTo>bt_stripe__Transaction__c</referenceTo>
    <relationshipLabel>Reattempt Transactions</relationshipLabel>
    <relationshipName>Reattempts</relationshipName>
    <type>Lookup</type>
</CustomField>