unpackaged/main/default/objects/bt_stripe__Transaction__c/fields/bt_stripe__Recalculate_Parent_Rollup__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Recalculate_Parent_Rollup__c</fullName>
    <defaultValue>false</defaultValue>
    <description>number fields are: Amount__c, Net_Amount__c, Application_Fee__c, Stripe_Fee__c, Partial_Amount__c, Retained_Net_Amount__c</description>
    <inlineHelpText>If A Parent field is set on the Transaction, this field is checked by packaged code any time:
A Number field on the Transaction ISCHANGED
Transaction Status ISCHANGED
Payment Status ISCHANGED</inlineHelpText>
    <label>Recalculate Parent Rollup</label>
    <type>Checkbox</type>
</CustomField>