unpackaged/main/default/objects/bt_stripe__Transaction__c/fields/bt_stripe__Reconciliation_Id__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Reconciliation_Id__c</fullName>
    <inlineHelpText>Identifier from when the bank payment has been received</inlineHelpText>
    <label>Reconciliation Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>