unpackaged/main/default/objects/bt_stripe__Transaction__c/fields/bt_stripe__Refunded_Application_Fee__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Refunded_Application_Fee__c</fullName>
    <inlineHelpText>The sum of all refunded application fees.</inlineHelpText>
    <label>Refunded Application Fee</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>