unpackaged/main/default/objects/bt_stripe__Transaction__c/fields/bt_stripe__Refunded_Stripe_Fee__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Refunded_Stripe_Fee__c</fullName>
    <inlineHelpText>The sum of all refunded Gateway fees.</inlineHelpText>
    <label>Refunded Payment Gateway Fee</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>