unpackaged/main/default/objects/bt_stripe__Transaction__c/fields/bt_stripe__Retained_Net_Amount__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Retained_Net_Amount__c</fullName>
    <inlineHelpText>The Amount less the Current Gateway Fee and the Current Application Fee after any refunds. This is the amount you will receive before currency conversion if applicable.</inlineHelpText>
    <label>Retained Net Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>