unpackaged/main/default/objects/bt_stripe__Transaction__c/fields/bt_stripe__Retained_Revenue__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Retained_Revenue__c</fullName>
    <description>Deprecated but can&#39;t delete because it&#39;s referenced by a Workflow Field Update that cannot be deleted</description>
    <inlineHelpText>Deprecated but can&#39;t delete because it&#39;s referenced by a Workflow Field Update that cannot be deleted</inlineHelpText>
    <label>zDeprecated Retained Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>