unpackaged/main/default/objects/bt_stripe__Transaction__c/fields/bt_stripe__Retained_Revenue_Amount__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Retained_Revenue_Amount__c</fullName>
    <description>The amount retained after any partial refunds. This field will be &quot;0&quot; if the transaction was fully refunded.</description>
    <inlineHelpText>The amount retained after any partial refunds. This field will be &quot;0&quot; if the transaction was fully refunded.</inlineHelpText>
    <label>Retained Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>