unpackaged/main/default/objects/bt_stripe__Transaction__c/fields/bt_stripe__Sales_Document__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Sales_Document__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Invoice related to the transaction.</description>
    <inlineHelpText>The Invoice related to the transaction.</inlineHelpText>
    <label>Invoice</label>
    <referenceTo>bt_stripe__Sales_Document__c</referenceTo>
    <relationshipLabel>Transactions</relationshipLabel>
    <relationshipName>Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>