unpackaged/main/default/objects/bt_stripe__Transaction__c/fields/bt_stripe__Seller_Message__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Seller_Message__c</fullName>
    <description>A human-readable description of the outcome type and reason, designed for you (the recipient of the payment), not your customer.</description>
    <inlineHelpText>A human-readable description of the outcome type and reason, designed for you (the recipient of the payment), not your customer.</inlineHelpText>
    <label>Seller Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>