unpackaged/main/default/objects/bt_stripe__Transaction__c/fields/bt_stripe__Source__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Source__c</fullName>
    <inlineHelpText>Tracks the source of transaction.</inlineHelpText>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Salesforce UI</fullName>
            </value>
            <value>
                <fullName>Virtual Terminal</fullName>
            </value>
            <value>
                <fullName>REST API</fullName>
            </value>
            <value>
                <fullName>Apex API</fullName>
            </value>
            <value>
                <fullName>PayLink</fullName>
            </value>
            <value>
                <fullName>DocumentLink</fullName>
            </value>
            <value>
                <fullName>Mobile</fullName>
            </value>
            <value>
                <fullName>Donations</fullName>
            </value>
            <value>
                <fullName>Event</fullName>
            </value>
            <value>
                <fullName>Flow</fullName>
            </value>
            <value>
                <fullName>Webhook</fullName>
            </value>
            <value>
                <fullName>Sync</fullName>
            </value>
            <value>
                <fullName>Storefront</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>