unpackaged/main/default/objects/bt_stripe__Transaction__c/fields/bt_stripe__Source_Charge__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Source_Charge__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>If a source Charge is related, this Transfer can process from a pending Charge (before the balance is available). In Stripe&#39;s API, this is referred to as source_transaction.</description>
    <inlineHelpText>If a source Charge is related, this Transfer can process from a pending Charge (before the balance is available). In Stripe&#39;s API, this is referred to as source_transaction.</inlineHelpText>
    <label>Source Charge</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Please select the correct charge</errorMessage>
        <filterItems>
            <field>bt_stripe__Transaction__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Charge</value>
        </filterItems>
        <filterItems>
            <field>bt_stripe__Transaction__c.bt_stripe__Transaction_Id__c</field>
            <operation>notEqual</operation>
            <value />
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>bt_stripe__Transaction__c</referenceTo>
    <relationshipLabel>Transactions (Source Charge)</relationshipLabel>
    <relationshipName>TransferSrcTransaction</relationshipName>
    <type>Lookup</type>
</CustomField>