unpackaged/main/default/objects/bt_stripe__Transaction__c/fields/bt_stripe__Spreedly_Transaction_Token__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Spreedly_Transaction_Token__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Unique Gateway-generated value. This is the unique ID related to this transaction.</inlineHelpText>
    <label>Spreedly Transaction Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>