unpackaged/main/default/objects/bt_stripe__Transaction__c/fields/bt_stripe__Statement_Descriptor__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Statement_Descriptor__c</fullName>
    <description>Appends to the customer&#39;s bank statement. 22 character maximum.</description>
    <inlineHelpText>Appends to the customer&#39;s bank statement. 22 character maximum.</inlineHelpText>
    <label>Statement Descriptor</label>
    <length>22</length>
    <type>Text</type>
</CustomField>