unpackaged/main/default/objects/bt_stripe__Transaction__c/fields/bt_stripe__Stripe_Customer__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Stripe_Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>When the Transaction is successful, the Payment Gateway Customer field will auto-populate with the value of the related Payment Method&#39;s Payment Gateway Customer</inlineHelpText>
    <label>Payment Gateway Customer</label>
    <referenceTo>bt_stripe__Stripe_Customer__c</referenceTo>
    <relationshipLabel>Transactions</relationshipLabel>
    <relationshipName>Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>