unpackaged/main/default/objects/bt_stripe__Transaction__c/fields/bt_stripe__Stripe_Fee__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Stripe_Fee__c</fullName>
    <inlineHelpText>The Gateway fee less any refunds. If a refund is processed, this amount will decrease as Gateway&#39;s fee will decrease.</inlineHelpText>
    <label>Net Payment Gateway Fee</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>