unpackaged/main/default/objects/bt_stripe__Transaction__c/fields/bt_stripe__Timestamp__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Timestamp__c</fullName>
    <label>Timestamp</label>
    <length>20</length>
    <type>Text</type>
</CustomField>