unpackaged/main/default/objects/bt_stripe__Transaction__c/fields/bt_stripe__Transaction_Id__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Transaction_Id__c</fullName>
    <inlineHelpText>Unique Gateway-generated value. This is the unique ID related to this transaction.</inlineHelpText>
    <label>Transaction ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>